# KiwiDownloader

./: Cargo.toml  Dockerfile
locales/: de.ftl  en.ftl  es.ftl  fr.ftl  it.ftl  mi.ftl  ru.ftl  tr.ftl
src/: config.rs  locales.rs  main.rs  models.rs
src/db/: mod.rs
src/handlers/: callbacks.rs  messages.rs  mod.rs
src/services/: downloader.rs
