[package]
name = "kiwi-downloader"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
fluent = "0.17"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
teloxide = { version = "0.17", default-features = false, features = ["rustls", "rustls-native-roots", "ctrlc_handler"] }
tokio = { version = "1.39", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
unic-langid = "0.9"
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }
time = "=0.3.36"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
